# LodeRunner-FinalProjectOOP1

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: SFML.cmake
include/: Board.h  Game.h
include/DataManagement/: GameState.h  ResourceInfo.h  ResourceManager.h  SoundManager.h  StyleManager.h
include/GameObjects/moving/: Enemy.h  Player.h  SmartEnemy.h  StupidEnemy.h
include/GameObjects/parents/: GameObject.h  MovingObject.h  StaticObject.h
include/GameObjects/static/: Coin.h  DiggableFloor.h  Ladder.h  Rope.h  Wall.h
include/Screens/: GameCompleteScreen.h  GameOverScreen.h  GameScreen.h  HelpScreen.h  LevelSucceededScreen.h  MenuBar.h  MenuScreen.h  OverlayScreen.h  Screen.h  SettingsScreen.h
include/Types/: BoardSymbols.h  Buttons.h  Fonts.h  Game_Objects.h  Sounds.h  StyleType.h
include/Utilities/: Consts.h  Helpers.h  Paths.h  Resources.h  SpeedSettings.h
resources/: CMakeLists.txt  board.txt  difficultBoard.txt  easierBoard.txt
resources/Board/: Level1.txt  Level2.txt  Level3.txt
src/: Board.cpp  Game.cpp  main.cpp
src/DataManagement/: GameState.cpp  ResourceManager.cpp  SoundManager.cpp  StyleManager.cpp
src/GameObjects/moving/: Enemy.cpp  Player.cpp  SmartEnemy.cpp  StupidEnemy.cpp
src/GameObjects/parents/: GameObject.cpp  MovingObject.cpp  StaticObject.cpp
src/GameObjects/static/: Coin.cpp  DiggableFloor.cpp  Ladder.cpp  Rope.cpp  Wall.cpp
src/Screens/: GameCompleteScreen.cpp  GameOverScreen.cpp  GameScreen.cpp  HelpScreen.cpp  LevelSucceededScreen.cpp  MenuBar.cpp  MenuScreen.cpp  OverlayScreen.cpp  Screen.cpp  SettingsScreen.cpp
src/Utilities/: Helpers.cpp
